Viz updates, style refinements

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div><!-- /.container-fluid -->
   </nav>
 
-  <div class="section" id="grp-overview visible-delay">
+  <div class="section visible-delay" id="grp-overview">
     <div class="container">
       <h1>Overview</h1>
 
@@ -72,6 +72,23 @@
       <p>
         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas dui vitae ipsum luctus placerat vitae nec turpis. Nunc feugiat nunc vitae risus accumsan fermentum. Nulla nec dignissim ex. Praesent aliquam nisi eleifend maximus tempor. Ut at consequat tellus. Sed bibendum, purus at molestie convallis, risus quam dignissim dolor, ut commodo libero felis a nisl. Vestibulum diam mi, tincidunt vel condimentum vitae, imperdiet eu elit. Phasellus lectus arcu, rhoncus at eros ac, efficitur varius enim. Nam id elit quis magna mollis gravida.
       </p>
+
+      <p>
+        Fusce ultricies lacinia ornare. Nulla eleifend, tellus non lacinia tincidunt, diam ipsum aliquet ligula, ut vulputate velit erat eget ipsum. Vivamus mattis, massa vel tincidunt elementum, augue augue auctor dolor, in tristique tortor massa a tortor. Aenean mattis tempor tristique. Ut vitae sapien neque. Praesent porttitor augue vitae tortor commodo, et lobortis justo luctus. Sed aliquam enim non laoreet rhoncus. Suspendisse nisl ex, imperdiet quis iaculis vitae, fermentum eu est. Etiam non nulla pulvinar purus placerat laoreet ut ac orci. Aenean ut lectus mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer ut turpis massa. Morbi ut massa at sapien faucibus interdum quis a sapien.
+      </p>
+
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec egestas dui vitae ipsum luctus placerat vitae nec turpis. Nunc feugiat nunc vitae risus accumsan fermentum. Nulla nec dignissim ex. Praesent aliquam nisi eleifend maximus tempor. Ut at consequat tellus. Sed bibendum, purus at molestie convallis, risus quam dignissim dolor, ut commodo libero felis a nisl. Vestibulum diam mi, tincidunt vel condimentum vitae, imperdiet eu elit. Phasellus lectus arcu, rhoncus at eros ac, efficitur varius enim. Nam id elit quis magna mollis gravida.
+      </p>
+
+      <div class="text-bubble center three-fourths-width ">
+        It’s every generation throws a hero up the pop charts
+
+        <div class="standard-text">
+          -Paul Simon, <a href="http://www.paulsimon.com/us/music/paul-simons-concert-park-august-15-1991/boy-bubble">The Boy in The Bubble</a>, Graceland (1986)
+        </div>
+      </div>
+
       <p>
         Fusce ultricies lacinia ornare. Nulla eleifend, tellus non lacinia tincidunt, diam ipsum aliquet ligula, ut vulputate velit erat eget ipsum. Vivamus mattis, massa vel tincidunt elementum, augue augue auctor dolor, in tristique tortor massa a tortor. Aenean mattis tempor tristique. Ut vitae sapien neque. Praesent porttitor augue vitae tortor commodo, et lobortis justo luctus. Sed aliquam enim non laoreet rhoncus. Suspendisse nisl ex, imperdiet quis iaculis vitae, fermentum eu est. Etiam non nulla pulvinar purus placerat laoreet ut ac orci. Aenean ut lectus mi. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Integer ut turpis massa. Morbi ut massa at sapien faucibus interdum quis a sapien.
       </p>
@@ -151,6 +168,19 @@
       </div>
       <!-- /Word Clouds -->
 
+      <p>
+        Morbi ut <i>accumsan</i> turpis. Pellentesque euismod <b>efficitur velit</b>, a maximus elit elementum quis. Donec accumsan scelerisque egestas. Proin consectetur sagittis efficitur. Aliquam laoreet ultrices congue. Nullam in fringilla justo. Mauris a lectus et velit blandit suscipit in nec metus. Phasellus commodo vehicula mollis. Sed in nisi pulvinar, elementum arcu sit amet, accumsan quam. Nullam dapibus lectus diam, vel iaculis enim venenatis nec. Aliquam at est iaculis, dignissim mauris at, bibendum lacus. Quisque tincidunt, neque ut laoreet sagittis, nisi velit posuere sem, gravida scelerisque enim erat semper leo. Nullam suscipit, tellus non vestibulum placerat, lacus purus mattis odio, in imperdiet ante dolor eget massa. Etiam aliquet sem dui, at cursus ipsum venenatis eget.
+      </p>
+
+      <div class="quote">
+        <q>Being considered Crazy by those who are still victims of cultural conditioning is a compliment.</q>
+        <div class="attribution">&mdash;Jason Hairston (2014)</div>
+      </div>
+
+      <p>
+        Nam turpis lectus, efficitur et pretium ut, vestibulum id ipsum. Etiam vel ex odio. Pellentesque sed sem dictum, porttitor massa vitae, sollicitudin leo. Sed blandit tellus sed mauris aliquam sagittis. Nullam molestie erat purus, sed molestie risus mollis sit amet. Donec a posuere quam, ut cursus enim. Suspendisse scelerisque enim elit, at vehicula arcu eleifend interdum. Donec sit amet quam consequat, volutpat enim non, facilisis urna. Praesent sagittis ante neque, eu accumsan enim lacinia eget.
+      </p>
+
     </div>
   </div>
 
@@ -166,16 +196,16 @@
       <div class="row note-box-set">
         <div class="col-md-4">
           <div class="note-box dim">
-            <h2>### <span class="light">Instrumentals</span></h2>
+            <h2>&asymp;150 <span class="light-text">Instrumentals</span></h2>
             <p>
-              Of the 4500 songs ### are instrumental and are excluded from the lyrics analysis.
+              Of the 4500 songs &asymp;150 are instrumental and are excluded from the lyrics analysis.
             </p>
           </div>
         </div>
 
         <div class="col-md-4">
           <div class="note-box dim">
-            <h2>194 <span class="light">Multiyear Songs</span></h2>
+            <h2>194 <span class="light-text">Multiyear Songs</span></h2>
             <p>
               Some songs remained popular for over a year: a total of <b>194</b> songs spanned more than more year.
               No multi-year song spanned more than two years and all occurred on consectutive years.
@@ -185,7 +215,7 @@
 
         <div class="col-md-4">
           <div class="note-box dim">
-            <h2>103 <span class="light">Songs Missing Lyrics</span></h2>
+            <h2>103 <span class="light-text">Songs Missing Lyrics</span></h2>
             <p>
               For <b>103</b> songs lyrics could not be obtained for all songs. Most of these are missing
               due to licensing issues or quality concerns.
@@ -217,7 +247,7 @@
     <div class="container">
       <h1>Broad Trends</h1>
 
-      <!-- Top Artist Distrobution -->
+      <!-- Top Artist Distribution -->
       <h2>Contributions by Artists</h2>
       <p>
         Most of the artists appeared in the corpus only once, but some occurred many times.
@@ -225,7 +255,7 @@
       <div class="image-set h-650">
         <div class="image-set-list">
           <div class="image-set-subheader header-vspace">
-            Songs / Artists Distrobution
+            Songs / Artists Distribution
           </div>
 
           <div class="image-set-item default-item" data-src="charts/artists_with_songs_trans.png">
@@ -241,7 +271,7 @@
         <div class="image-set-full">
         </div>
       </div>
-      <!-- /Top Artist Distrobution -->
+      <!-- /Top Artist Distribution -->
 
       <!-- Word Counts -->
       <h2>Word Counts</h2>
@@ -269,7 +299,15 @@
             </div>
           </div>
         </div>
-        <div class="image-set-full"></div>
+        <div class="image-set-full center">
+          <ul class="legend inline">
+            <li class="title">Legend</li>
+            <li class="tri">All words, Decade Trend</li>
+            <li class="pri">All words, Year Trend</li>
+            <li class="sec">Unique Words, Decade Trend</li>
+            <li class="dark">Unique Words, Year Trend</li>
+          </ul>
+        </div>
       </div>
       <!-- /Word Counts -->
 
@@ -406,13 +444,16 @@
 
       <h2>Adjectives Spanning Decades</h2>
       <div class="row">
-        <div class="col-md-5 center">
+        <div class="col-md-4 center">
           <div class="chart-wrap">
             <img src="charts/adj_histogram_decade_span.png" height="500" />
           </div>
         </div>
-        <div class="col-md-7">
-          <div class="text-bubble sec right no-left-margin no-top-margin fill">
+        <div class="col-md-8">
+          <div class="chart-wrap center">
+            <img src="charts/adjs_5-decade_spanners.png" height="750" />
+          </div>
+          <!-- <div class="text-bubble sec right no-left-margin no-top-margin fill">
             <h3>Five-decade Spanning Adjective List</h3>
             <p class="standard-text">20 words, in alphabetical order:</p>
 
@@ -438,7 +479,7 @@
                 <li>wet</li>
                 <li>worth</li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -446,13 +487,17 @@
 
       <h2>Nouns Spanning Decades</h2>
       <div class="row">
-      <div class="col-md-5 center">
+      <div class="col-md-4 center">
         <div class="chart-wrap">
           <img src="charts/noun_histogram_decade_span.png" height="500" />
         </div>
       </div>
-        <div class="col-md-7">
-          <div class="text-bubble sec right no-left-margin no-top-margin fill">
+        <div class="col-md-8">
+          <div class="chart-wrap center">
+            <img src="charts/nouns_5-decade_spanners.png" height="750" />
+          </div>
+
+          <!-- <div class="text-bubble sec right no-left-margin no-top-margin fill">
             <h3>Five-decade Spanning Noun List</h3>
             <p class="standard-text">47 words, in alphabetical order:</p>
 
@@ -505,7 +550,7 @@
               <li>wish</li>
               <li>work</li>
             </ul>
-          </div>
+          </div> -->
         </div>
       </div>
 
@@ -529,6 +574,14 @@
         <div class="scroll-hort">
           <img src="charts/noun_histogram_decade_offensives_reduced.png" />
         </div>
+          <ul class="legend inline">
+            <li class="title">Legend</li>
+            <li class="light">1970</li>
+            <li class="dark">1980</li>
+            <li class="sec">1990</li>
+            <li class="tri">2000</li>
+            <li class="pri">2010</li>
+          </ul>
       </div>
     </div>
   </div>
@@ -615,7 +668,7 @@
         <div class="clearfix">&nbsp;</div>
 
         <div class="chart-wrap">
-          <img src="charts/hypernyms/adj_decade_comp_hypernyms_inner_shared.png" />
+          <img src="charts/hypernyms/adj_decade_comp_hypernyms_spanning.png" />
         </div>
 
         <div class="chart-wrap">
@@ -644,7 +697,7 @@
         </div>
 
         <div class="chart-wrap">
-          <img src="charts/hypernyms/noun_decade_comp_hypernyms_inner_shared.png" />
+          <img src="charts/hypernyms/noun_decade_comp_hypernyms_shared_5x.png" />
         </div>
 
       </div>
