Viz updates, style refinements

--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
         It’s every generation throws a hero up the pop charts
 
         <div class="standard-text">
-          -Paul Simon, <a href="http://www.paulsimon.com/us/music/paul-simons-concert-park-august-15-1991/boy-bubble">The Boy in The Bubble</a>, Graceland (1986)
+          &mdash; Paul Simon, <a href="http://www.paulsimon.com/us/music/paul-simons-concert-park-august-15-1991/boy-bubble">"The Boy in The Bubble"</a>, Graceland (1986)
         </div>
       </div>
 
