Top 50 Predictions and Offensive Word timeline

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
       <ul class="nav navbar-nav" role="tablist">
         <li><a href="#grp-overview">Overview</a></li>
-        <li><a href="#grp-1">Data Conditioning</a></li>
+        <li><a href="#grp-1">Data</a></li>
         <li><a href="#grp-broad">Broad Trends</a></li>
         <li><a href="#grp-2">Word Variation</a></li>
         <li><a href="#grp-3">Word Consistency</a></li>
@@ -228,7 +228,7 @@
 
   <div class="section visible-delay" id="grp-1">
     <div class="container">
-      <h1>Data Conditioning</h1>
+      <h1>Data</h1>
       <p>
         Morbi ut <i>accumsan</i> turpis. Pellentesque euismod <b>efficitur velit</b>, a maximus elit elementum quis. Donec accumsan scelerisque egestas. Proin consectetur sagittis efficitur. Aliquam laoreet ultrices congue. Nullam in fringilla justo. Mauris a lectus et velit blandit suscipit in nec metus. Phasellus commodo vehicula mollis. Sed in nisi pulvinar, elementum arcu sit amet, accumsan quam. Nullam dapibus lectus diam, vel iaculis enim venenatis nec. Aliquam at est iaculis, dignissim mauris at, bibendum lacus. Quisque tincidunt, neque ut laoreet sagittis, nisi velit posuere sem, gravida scelerisque enim erat semper leo. Nullam suscipit, tellus non vestibulum placerat, lacus purus mattis odio, in imperdiet ante dolor eget massa. Etiam aliquet sem dui, at cursus ipsum venenatis eget.
       </p>
@@ -583,6 +583,53 @@
             <li class="pri">2010</li>
           </ul>
       </div>
+
+      <h2>First Appearance of Offensive Words</h2>
+      <ul class="timeline">
+
+        <li class="year">1970</li>
+        <li> <span class="word">shit</span> from <span class="song">"American Woman"</span> by <span class="artist">The Guess Who</span>
+        </li>
+
+        <li class="year">1971</li>
+        <li><span class="word">dick</span> from <span class="song">"Theme from Shaft"</span> by <span class="artist">Isaac Hayes</span></li>
+
+        <li class="year">1973</li>
+        <li><span class="word">bullshit</span> from <span class="song">"Money"</span> by <span class="artist">Pink Floyd</span></li>
+
+        <li class="year">1975</li>
+        <li><span class="word">pussy</span> from <span class="song">"Killer Queen"</span> by <span class="artist">Queen</span></li>
+
+        <li class="year">1977</li>
+        <li><span class="word">bitch</span> from <span class="song">"Rich Girl"</span> by <span class="artist">Hall and Oates</span></li>
+        <li><span class="word">bone</span> from <span class="song">"Blinded by the Light"</span> by <span class="artist">Manfred Mann's Earth Band</span></li>
+        <li><span class="word">booty</span> from <span class="song">"Dazz"</span> by <span class="artist">Brick</span></li>
+
+        <li class="year">1983</li>
+        <li><span class="word">ass</span> from <span class="song">"Little Red Corvette"</span> by <span class="artist">Prince</span></li>
+
+        <li class="year">1987</li>
+        <li><span class="word">butt</span> from <span class="song">"Bad"</span> by <span class="artist">Michael Jackson</span></li>
+
+        <li class="year">1992</li>
+        <li><span class="word">ho</span> from <span class="song">"Baby Got Back"</span> by <span class="artist">Sir Mix-a-Lot</span></li>
+        <li><span class="word">niggaz</span> from <span class="song">"People Everyday"</span> by <span class="artist">Arrested Development</span></li>
+
+        <li class="year">1993</li>
+        <li><span class="word">nigga</span> from <span class="song">"Whoomp! (There It Is)"</span> by <span class="artist">Tag Team</span></li>
+        <li><span class="word">niggas</span> and <span class="word">motherfucker</span> from <span class="song">"Nuthin' but a 'G' Thang"</span> by <span class="artist">Dr. Dre</span></li>
+        <li><span class="word">hoe</span> from <span class="song">"Dre Day"</span> by <span class="artist">Dr. Dre</span></li>
+        <li><span class="word">pimp</span> from <span class="song">"Rebirth of Slick (Cool Like Dat)"</span> by <span class="artist">Digable Planets</span></li>
+
+        <li class="year">1994</li>
+        <li><span class="word">whore</span> from <span class="song">"U.N.I.T.Y."</span> by <span class="artist">Queen Latifah</span></li>
+
+        <li class="year">1996</li>
+        <li><span class="word">pimpin</span> from <span class="song">"Tonite's tha Night"</span> by <span class="artist">Kris Kross</span></li>
+
+        <li class="year">1999</li>
+        <li><span class="word">cock</span> from <span class="song">"Can I Get A..."</span> by <span class="artist">Jay-Z</span></li>
+        <li><span class="word">titty</span> from <span class="song">"Back That Azz Up"</span> by <span class="artist">Juvenile</span></li>
     </div>
   </div>
 
@@ -700,6 +747,14 @@
           <img src="charts/hypernyms/noun_decade_comp_hypernyms_shared_5x.png" />
         </div>
 
+
+        <div class="chart-wrap">
+          <img src="charts/comp_is_top_50_predictions.png" />
+        </div>
+
+        <div class="chart-wrap">
+          <img src="charts/comp_is_top_50_totals.png" height="500" />
+        </div>
       </div>
     </div>
   </div>
