--- a/index.html
+++ b/index.html
@@ -65,12 +65,36 @@
 
         <ul>
           <li>Word repetition in top charting songs has been increasing over the decades.</li>
-          <li>Over 55% of the artists in our data set had only one top song.</li>
+          <li>Over 55% of the artists in our data set had only one top charting song.</li>
           <li>Offensive word use dramatically increased in the 1990s and continued to grow rapidly into the 2000s.</li>
         </ul>
       </div>
 
-      <!-- <h2>Trendy or Timeless?</h2>
+      <p>
+        Music may tell us what the artist wants to say, but popular music tells us what the people want to hear.
+        And that can tell us much about who they are.
+        This project aims to discover the meaningful messages about cultures and their times, as revealed by the lyrics of popular music.
+        It has long been recognized that studying a culture’s popular music can yield insight into its values and mood, but until recently analysis was confined to subjective examination of small samples.
+      </p>
+
+      <p>
+        In recent years, considerable effort has been devoted to studying and classifying two of the three basic ingredients of music: tones and rhythms.
+        We studied the third ingredient, words, which have received comparatively less attention.
+      </p>
+
+      <p>
+        Studying song lyrics is different than general sentiment analysis of, say, a culture’s literature.
+        Lyrics can have attributes that would be out of place in literature or formal prose, such as repetition, rhyming, and rhythmic delivery.
+        Moreover, one might speculate that lyrics may have a higher tendency to be formulaic or even clichéd, making them more amenable to pattern analysis than prose generally.
+      </p>
+
+      <p>
+        Over most of the history of cultural musicology, research was hampered by the lack of available data.
+        And when songs themselves became data stored on Compact Discs, the computing power necessary to conduct analysis was being devoted to other uses.
+        Only recently has the abundance of storage and computational capacity made it feasible to study music’s messages empirically.
+      </p>
+
+      <h2>Trendy or Timeless?</h2>
       <p>
         Popular music is on the forefront of what the people consider new and cool, but it can also reflect shared values that are more persistent, even timeless.
         Leaving aside the ancient question of whether art imitates life or life imitates art, are there some concepts so firmly rooted in collective human belief systems that they remain constant across time?
@@ -80,7 +104,7 @@
       <p>
         We chose to concentrate on the Billboard Year-End Top 100 Charts from 1970 to 2014, a corpus of 4500 songs spanning into 5 decades.
         By measuring, exploring, and analyzing the lyrics using a variety of techniques &mdash; including statistical, natural language processing, and machine learning &mdash; at multiple levels of abstraction, we were able to draw some preliminary insights, which will be highlighted throughout.
-      </p> -->
+      </p>
 
       <div class="clearfix"></div>
 
@@ -112,7 +136,7 @@
 
       <p>
         Looking at the composition of the artists, we see that in any one year there are between sixty and ninety different artists represented in the Billboard Year-end charts, but over time a starkly different picture emerges.
-        The vast majority of artists in our data have a small number of top songs--many only a single song--while a few artists have staying power and have many top songs.
+        The vast majority of artists in our data have a small number of top songs&mdash;many only a single song&mdash;while a few artists have staying power and have many top songs.
       </p>
 
       <div class="vspace"></div>
@@ -1022,6 +1046,11 @@
               Usage of the images falls under the 'Non-commercial' clause of Stockvault.net's <a href="http://www.stockvault.net/terms-of-use">Terms of Use</a>.
             </div>
           </div>
+        </div>
+
+        <div class="quote">
+          <q>Being considered Crazy by those who are still victims of cultural conditioning is a compliment.</q>
+          <div class="attribution">&mdash;Jason Hairston (2014)</div>
         </div>
       </div>
     </footer>
