Website Release Candidate

--- a/index.html
+++ b/index.html
@@ -134,11 +134,6 @@
         For the most part, we consider the persistence of an artist over a period of time a signal that the artist’s message continues to resonate with the populace.
       </p>
 
-      <p>
-        Looking at the composition of the artists, we see that in any one year there are between sixty and ninety different artists represented in the Billboard Year-end charts, but over time a starkly different picture emerges.
-        The vast majority of artists in our data have a small number of top songs&mdash;many only a single song&mdash;while a few artists have staying power and have many top songs.
-      </p>
-
       <div class="vspace"></div>
 
       <div class="row">
@@ -165,10 +160,8 @@
       <div class="vspace"></div>
 
       <p>
-        By contrast, we can also learn something from see how the top artists change over time.
-        With the interactive chart below, you can see that Elton John ruled the 1970s, Madonna was the queen of the 1980s, with Michael Jackson in second place, and Mariah Carey led the 1990s, with Janet Jackson a distant second.
-        In the early 2000s the television show American Idol propelled Kelly Clarkson to the top spot, and rap artists first began to be represented in numbers.
-        Using the interactive chart below you can examine the productivity of the top artists for any time span ranging from the entire 45 years the data set down to a single year.
+        Looking at the composition of the artists, we see that in any one year there are between sixty and ninety different artists represented in the Billboard Year-end charts, but over time a starkly different picture emerges.
+        The vast majority of artists in our data have a small number of top songs&mdash;many only a single song&mdash;while a few artists have staying power and have many top songs.
       </p>
 
       <div class="vspace"></div>
@@ -177,6 +170,9 @@
       <h2>Contributions by Artists</h2>
       <p>
         Most of the artists appeared in the corpus only once, but some occurred many times.
+        Use the charts below to explore the distribution of artists and the number of their songs
+        that ranked among the top. The charts increase visiblity of the artists with the most songs
+        as you work through them.
       </p>
       <div class="image-set h-650">
         <div class="image-set-list">
@@ -327,7 +323,7 @@
         While examples of <i>change</i> are readily available, is it the most prevalent?
         Using the word frequency displays from above, one can conclude that <i>love</i> is the most persistent theme in popular music.
         At this cursory level of analysis there does not appear to be any other one concept that comes close.
-        Accordingly, deeper levels of analysis will be presented to see if deeper insight can be attained.
+        Accordingly, deeper levels of analysis will be presented to see if greater insight can be attained.
         The process involves some complicated analysis of the lyrics data.
         The study continues by describing the data and the transformations made to make it amenable to analysis.
       </p>
@@ -811,11 +807,12 @@
       </div>
 
 
-    </div>
+      <div class="vspace v50"></div>
+    <!-- </div>
   </div>
 
   <div class="section visible-delay">
-    <div class="container">
+    <div class="container"> -->
       <h2>Hypernyms</h2>
       <div>
         <p>
@@ -1108,7 +1105,7 @@
 
 
 
-  <div class="section last" id="grp-prediction">
+  <div class="section  visible-delay" id="grp-prediction">
     <div class="container">
       <h1>Prediction</h1>
 
@@ -1123,7 +1120,7 @@
       </p>
 
       <p>
-        First, we tuned and fit models against noun vectors derived from all 3 <a href="#grp-nlp-vocab">Vocabularies</a> -- Initial, Shrunken-1, and Shrunken-2 -- training on all data from 1970-2013 using the tuned hyperparameters.
+        First, we tuned and fit models against noun vectors derived from all 3 <a href="#grp-nlp-vocab">Vocabularies</a> &mdash; Initial, Shrunken-1, and Shrunken-2 &mdash; training on all data from 1970-2013 using the tuned hyperparameters.
         Then we predicted ‘Top 50 versus Bottom 50’ exclusively for 2014 using the same models derived from the 3 vocabularies.
       </p>
 
@@ -1345,7 +1342,7 @@
     </div>
   </div>
 
-  <div class="section last" id="grp-conclude">
+  <div class="section visible-delay last" id="grp-conclude">
     <div class="container">
       <h1>Conclusion</h1>
 
@@ -1417,7 +1414,7 @@
       </p>
 
       <p>
-        Perhaps the groundwork we have laid can assist in your research goals. If so, please [contact] us.
+        Perhaps the groundwork we have laid can assist in your research goals. If so, please <a href="mailto:michaeljohns@g.harvard.edu">contact us</a>.
       </p>
     </div>
   </div>
